Update with anchors and data update

--- a/about.html
+++ b/about.html
@@ -9,7 +9,8 @@ pageName: about
     {% include about-subnav.html olClass='push-0 list-group-inline pad-t-1-4 pad-b-1-4' aClass="inline-block island-1-2 line-hover" %}
   </div>
 </div>
-<section id="history-hub" tabindex="0">
+<div id="history-hub" class="anchor anchor-about"></div>
+<section tabindex="0">
   <div class="title-frame history-title bg-primary">
     <h2 class="yotta text-fff">History of the Hub</h2>
   </div>
@@ -25,7 +26,8 @@ pageName: about
     </div>
   {% endfor %}
 </section>
-<section id="our-services" class="our-services" tabindex="0">
+<div id="our-services" class="anchor anchor-about"></div>
+<section class="our-services" tabindex="0">
   <div class="bg-lg pad-t-b-2">
     <div class="wrapper pad-t-b-2">
       <h2 class="text-center gutter">Our Services</h2>
@@ -59,7 +61,8 @@ pageName: about
     </div>
   {% endfor %}
 </section>
-<section id="what-we-give" class="what-we-give" tabindex="0">
+<div id="what-we-give" class="anchor anchor-about"></div>
+<section class="what-we-give" tabindex="0">
   <div class="slide slide-banner slide-reverse" style="background-image: url('{{site.baseurl}}{{pages.what-we-give.bannerImg}}');">
     <div class="hero-overlay"></div>
     <div class="slide-unit slide-content">
@@ -123,7 +126,8 @@ pageName: about
     </div>
   </div>
 </section>
-<section id="board-of-directors" tabindex="0">
+<div id="board-of-directors" class="anchor anchor-about"></div>
+<section tabindex="0">
   <div id="board-slide" class="slide slide-inverted slide-reverse board-slide">
     <div class="slide-unit slide-content bg-lg">
       <div class="slide-content-wrap gutter pad-t-b-2">
