--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@ pageClass: home
     </div>
   </section>
 {% endif %}
-<section id="hours" class="hours pad-t-b-2" tabindex="0">
+<div id="hours" class="anchor"></div>
+<section class="hours pad-t-b-2" tabindex="0">
   <div class="wrapper">
     <h2 class='gutter push-0'>Store Hours & Locations</h2>
     <div class="grid grid-stretch island-1-2">
