Update posts layout and data management

--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@ pageName: about
 <div id="history-hub" class="anchor anchor-about"></div>
 <section tabindex="0">
   <div class="title-frame history-title bg-primary" style="background-image: url('{{site.baseurl}}{{pages.historyTitleSlide.img}}')">
+    <div class="hero-overlay"></div>
     <h2 class="yotta text-fff">{{pages.historyTitleSlide.title}}</h2>
   </div>
   {% for slides in pages.history-slides.edit-history-slides %}
