Fix blog boolean error

--- a/news-events.html
+++ b/news-events.html
@@ -26,7 +26,7 @@ pageName: news-events
         </a>
         {% endfor %}
       </section>
-      <div class="push gutter">
+      <div class="divider push gutter">
         <hr class="pad-t news-seperator">
       </div>
       <section class="news push-2">
