Fix https linking

--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@ pageName: about
             </div>
           </div>
         </div>
-        {% for donations in site.data.donations %}
+        {% for donations in pages.what-we-give.donations %}
           <div class="unit [ xs-1 m-1-2 ] island-1-2">
             <div class="grid">
               <div class="unit [ xs-2-3 ]">
