--- a/news-events.html
+++ b/news-events.html
@@ -10,7 +10,7 @@ pageName: news-events
     <div class="unit [ xs-1 m-3-4 ] categories-wrap cat-all">
       <section class="events push">
         <h2 class="gutter">Upcoming Events</h2>
-        {% for news in site.categories.events %}
+        {% for news in site.categories.events limit:5 %}
         <a href="{{site.baseurl}}/{{news.url}}" class="grid grid-stretch bg-lg-hov island-1-2">
           <div class="unit [ xs-1 s-1-2 m-1-3 l-1-4 ] island-1-2">
             <div class="embed embed-1by1" style="background-image: url('{{site.baseurl}}{{news.banImage}}')">
