--- a/donate.html
+++ b/donate.html
@@ -9,6 +9,16 @@ formID: donate-form
 ---
 {% assign pages=site.data.pages.[page.pageName] %}
 <div class="max-length gutter push-2 smooth-scroll">
+  <h2>Donate Online</h2>
+  <p>To set up an online donation, both with a credit card or with PayPal, click the PayPal link below.</p>
+  <p class="push-2">Donation options include one-time donations and recurring monthly donations.</p>
+  <div class="push-2 paypal-form">
+    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+      <input type="hidden" name="cmd" value="_s-xclick" />
+      <input type="hidden" name="hosted_button_id" value="RVPYZ84VGDBRC" />
+      <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+      <img alt="" border="0" src="https://www.paypal.com/en_CA/i/scr/pixel.gif" />
+    </form>
+  </div>
   {{pages.bodyContent | markdownify}}
 </div>
-{% include form.html %}
