--- a/news-events.html
+++ b/news-events.html
@@ -10,7 +10,7 @@ pageName: news-events
     <div class="unit [ xs-1 m-3-4 ] categories-wrap cat-all">
       <section class="events push">
         <h2 class="gutter">Upcoming Events</h2>
-        {% for news in site.categories.events limit:5 %}
+        {% for news in site.categories.events limit:pages.maxEvents %}
         <a href="{{site.baseurl}}/{{news.url}}" class="grid grid-stretch bg-lg-hov island-1-2">
           <div class="unit [ xs-1 s-1-2 m-1-3 l-1-4 ] island-1-2">
             <div class="embed embed-1by1" style="background-image: url('{{site.baseurl}}{{news.banImage}}')">
@@ -20,7 +20,7 @@ pageName: news-events
             <h3 class="giga push-1-2 text-secondary">{{news.title}}</h3>
             <p class="push-0 bold inline-block">{{news.eventDate}} | {{news.eventTime}}</p>
             <p class="text-secondary bold push-1-2">{{news.eventLocation}}</p>
-            <p class="content-fill text-secondary push-0">{{news.meta}}</p>
+            <p class="content-fill text-secondary push-0">{{news.meta | truncate: 70 }}</p>
             <span class="hyperlink">Read more...</span>
           </div>
         </a>
@@ -31,7 +31,7 @@ pageName: news-events
       </div>
       <section class="news push-2">
         <h2 class="gutter">News</h2>
-        {% for news in site.categories.news %}
+        {% for news in site.categories.news limit:pages.maxNews %}
         <a href="{{site.baseurl}}/{{news.url}}" class="grid grid-stretch bg-lg-hov island-1-2">
           <div class="unit [ xs-1 s-1-2 m-1-3 l-1-4 ] island-1-2">
             <div class="embed embed-1by1" style="background-image: url('{{site.baseurl}}{{news.banImage}}')">
@@ -39,7 +39,7 @@ pageName: news-events
           </div>
           <div class="unit [ xs-1 s-1-2 m-2-3 l-3-4 ] island-1-2 unit-content-distribute">
             <h3 class="giga push-1-2 text-secondary">{{news.title}}</h3>
-            <p class="content-fill text-secondary push-0">{{news.meta}}</p>
+            <p class="content-fill text-secondary push-0">{{news.meta | truncate: 150 }}</p>
             <span class="hyperlink">Read more...</span>
           </div>
         </a>
