--- a/404.html
+++ b/404.html
@@ -1,8 +1,8 @@
 ---
 layout: main
-pageClass: thank-you
-title: Thank You
-pageName: thank-you
+pageClass: not-found
+title: Page not found
+pageName: not-found
 permalink: 404.html
 ---
 {% assign pages=site.data.pages.[page.pageName] %}
